Move to single screen no-scroll view

--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,45 @@ svg {
   cursor:crosshair;
 }
 
-#county_state {
-width: 290px;
-float: left;
+.info_value {
+  font-size: 20pt;
 }
+
+.ui-slider-horizontal {
+}
+
+.slider_and_stats_container {
+  padding-bottom: 15px;
+  clear:both;
+}
+
+.slider_label_amount {
+  padding-bottom: 5px;
+}
+
+.slider_checkbox_stats {
+  width: 70px;
+  float: right;
+  height: 70px;
+  padding-top: 10px;
+}
+
+.slider_container {
+  width: 400px;
+  float: left;
+}
+
+#country_state_pop {
+  padding-bottom: 40px;
+}
+
+#county_state {
+  width: 310px;
+  float: left;
+}
+
 #pop {
-    float: right;
+  position: relative;
 }
 
 #counties path {
@@ -177,17 +210,17 @@ body {
 #chart {
 	cursor: crosshair;
 	position: relative;
-	margin-top: 20px;
+	float:left;
 }
 
 #sliders {
 	float:left;
-	width: 46%;
 	background: #111;
 	padding: 15px;
 	border: 2px solid rgb(117, 107, 177);
 	border-radius: 15px;
-	height: 390px;
+	width: 500px;
+	height: 470px;
 }
 
 #county_info {
@@ -234,10 +267,11 @@ body {
 }
 
 #container{
-	width:962px;
 	margin-left:auto;
 	margin-right:auto;
 	position: relative;
+  width: 1500px;
+
 }
 
 .checkbox_label{
@@ -324,10 +358,6 @@ body {
 
 #title p {
 	margin: 0px 0px 10px 0px;
-}
-
-#top_bar {
-	height:212px;
 }
 
 #map_note {
