--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1 {
   background: #C51B8A;
 }
 
+#income_button.ui-state-active {
+  background: #31A354;
+}
+
 #female_headed_button:hover {
   background: #08519C;
 }
@@ -42,16 +46,13 @@ h1 {
   background: #C51B8A;
 }
 
-#female_headed_button {
-  border: 2px #444 solid;
+#income_button:hover {
+  background: #31A354;
 }
 
-#poverty_children_button {
-  border: 2px #444 solid;
-}
-
-#no_hs_button {
-  border: 2px #444 solid;
+.toggle_button {
+  border: 3px #444 solid !important;
+  margin-top: 7px;
 }
 
 .viz_info {
@@ -60,13 +61,14 @@ h1 {
 }
 
 .info_value {
+  width: auto;
+  float: left;
   font-size: 18pt;
   color: white;
-  text-align: center;
 }
 
 .slider_tag {
-  width: 300px;
+  width: 260px;
   margin-top: 20px;
   float: left;  
 }
@@ -96,8 +98,10 @@ h1 {
 }
 
 .slider_checkbox_stats {
-  width: 70px;
-  float: right;
+  width: 90px;
+  float: left;
+  margin-left: 25px;
+  text-align: center;
   height: 35px;
   padding-top: 10px;
 }
@@ -122,7 +126,7 @@ h1 {
 }
 
 #county_state_wrapper {
-  width: 270px;
+  width: 280px;
   float: left;
 }
 
@@ -288,7 +292,7 @@ h1 {
 }
 
 #info_income {
-    font-size: 13pt;
+#    font-size: 14pt;
 }
 
 
